Basic form error handling

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
+		"phosphor-svelte": "^2.0.1",
 		"postcss": "^8.4.39",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.4",
