--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.4.5",
+		"jsonwebtoken": "^9.0.2",
+		"mysql2": "^3.10.2"
+	}
 }
