--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"type": "module",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.10.2"
